MODE-2287: Replace BASE64 decoder